css alignment fixes

--- a/app/assets/stylesheets/partials/_base.css.sass
+++ b/app/assets/stylesheets/partials/_base.css.sass
@@ -224,7 +224,7 @@ label
 .content
   position: relative
 .main-inner
-  height: 100%
+  // height: 100%
 .main-content-view
   position: absolute
   left: 270px
