--- a/app/assets/stylesheets/partials/_buttons.css.sass
+++ b/app/assets/stylesheets/partials/_buttons.css.sass
@@ -198,7 +198,7 @@ a.trash-btn
     position: absolute
   .btn-action-selector
     text-overflow: ellipsis
-
+    vertical-align: bottom
     overflow: hidden
     &.chat-action-selector
       width: 165px
@@ -213,6 +213,8 @@ a.trash-btn
   &.left
     float: left
     margin-right: 5px
+.chat-actions-selector
+  width: 200px
 .btn-upload-photo
   width: 145px
 .calendar-picker-btn
